# Project-Pegasus

./: README.md
2023.5.8/motor_canmsgs/: CMakeLists.txt  package.xml
2023.5.8/motor_canmsgs/msg/: A1MotorMsg.msg  MotorMsg.msg  a1_motor_msg.hpp  motor_msg.hpp
2023.5.8/motor_canmsgs/msg/detail/: a1_motor_msg__builder.hpp  a1_motor_msg__traits.hpp  motor_msg__builder.hpp  motor_msg__traits.hpp
2023.5.8/robot_control/: CMakeLists.txt
2023.5.8/robot_control/include/robot_control/: motor_datasend.hpp  traj_generate.hpp
2023.5.8/robot_control/src/: motor_datasend.cpp  robot_control.cpp  state_switch.cpp  traj_generate.cpp
2023.5.8/ros2socketcan_bridge/: CMakeLists.txt  package.xml
2023.5.8/ros2socketcan_bridge/include/: candata.h
2023.5.8/ros2socketcan_bridge/src/: candata.cpp  ros2socketcan.cpp  ros2socketcan.h
2023.5.8/unitreeA1/: package.xml
2023.5.8/unitreeA1/include/unitreeMotor/: A1_control.hpp
2023.5.8/unitreeA1/src/: A1_control.cpp
imu_publish/: CMakeLists.txt  main.cpp  main.h  package.xml  saber_cfg.json
imu_publish/saber_ros_inc/: saber_config.h  saber_macro.h  saber_protocol.h  saber_tool.h
imu_publish/saber_ros_src/: saber_config.cpp  saber_protocol.cpp  saber_tool.cpp
motor_canmsgs/msg/detail/: a1_motor_msg__struct.hpp  motor_msg__struct.hpp
robot_communication/: CMakeLists.txt  package.xml
robot_communication/include/robot_communication/: robot_communication.hpp
robot_communication/src/: robot_communication.cpp
robot_control/: package.xml
robot_control/include/robot_control/: FSM_states.hpp  leg_states.hpp  robot_control.hpp
robot_control/src/: FSM_states.cpp  leg_states.cpp  traj_generate.cpp
robot_msgs/: CMakeLists.txt  package.xml
robot_msgs/msg/: JointAngle.msg
ros2socketcan_bridge/: CMakeLists.txt  package.xml
ros2socketcan_bridge/src/: ros2socketcan.cpp  ros2socketcan.h
unitreeA1/: CMakeLists.txt
unitreeA1/include/unitreeMotor/: A1_control.hpp
unitreeA1/src/: A1_control.cpp  test_motor.cpp
